--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
     <tr>
       <th>10</th>
       <td>118879422</td>
-      <td><img src="./data/structure_14.png" /></td>
+      <td><img src="https://github.com/chen3262/www/blob/master/test/data/structure_14.png" /></td>
       <td>340.811</td>
       <td>61.9</td>
       <td>3.3</td>
