--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -20,7 +22,7 @@
     <tr>
       <th>10</th>
       <td>118879422</td>
-      <td><img src="https://github.com/chen3262/www/blob/master/test/data/structure_14.png" /></td>
+      <td><img src="./data/structure_14.png" /></td>
       <td>340.811</td>
       <td>61.9</td>
       <td>3.3</td>
@@ -184,3 +186,4 @@
     </tr>
   </tbody>
 </table>
+</html>
