--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -185,3 +186,4 @@
     </tr>
   </tbody>
 </table>
+</html>
